--- a/docker/supervisor.d/elasticsearch.ini
+++ b/docker/supervisor.d/elasticsearch.ini
@@ -3,4 +3,8 @@ user=reactive-sandbox
 command=/opt/elasticsearch/bin/elasticsearch
 autostart=true
 autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 
