--- a/docker/supervisor.d/kafka.ini
+++ b/docker/supervisor.d/kafka.ini
@@ -3,4 +3,8 @@ user=reactive-sandbox
 command=/opt/kafka/bin/kafka-server-start.sh /opt/kafka/config/server.properties
 autostart=true
 autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 
