--- a/docker/supervisor.d/kafka.ini
+++ b/docker/supervisor.d/kafka.ini
@@ -1,6 +1,6 @@
 [program:kafka]
 user=reactive-sandbox
-command=/opt/kafka/bin/kafka-server-start.sh /opt/kafka/config/server.properties
+command=/opt/kafka/bin/kafka
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
